--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>by Quinn L.</h1>
+			<h1>Bob the Bumble bee</h1>
 		</header>
 			<section id="content">
 				<canvas id="VirtualPet" data-processing-sources="VirtualPet.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		buzzzz buzzzz buzzzzzzzzzzzzzz
+			buzzzz buzzzz buzzzzzzzzzzzzzz
 	    </footer>
 	</body>
 </html>
